# SunPath

./: README.md  setup.bat  setup.cfg
binder/: requirements.txt
data/: TMY.txt
data/SolarPilot/: Polar-20MW-results-10d.csv  Polar-20MW.spt  Surround-100MW-results-10d.csv  Surround-100MW.spt
data/Tonatiuh/: Seville_GTER_TMY.csv  etaPolar.csv  etaSurround.csv
source/: interpolation.ipynb  mirror_density.ipynb  sampling.csv
source/colors/: RainbowUniform.json  colormap.ipynb
source/sunpath/: SunCalculator.py  SunInterpolators.py  SunPlotter.py  SunSpatial.py  SunTemporal.py  __init__.py  colors.py  coordinates.py
