[metadata]
name = sunpath
version = 0.1.6
author = vg-cyi
description = Interpolation and integration over sun path for applications in solar energy 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vg-cyi/SunPath
project_urls =
    Bug Tracker = https://github.com/vg-cyi/SunPath/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.6
install_requires =
    mathutils
	suncalc
	scipy
	matplotlib

[options.packages.find]
where = source